# ur5_bringup

./: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  README.md  package.xml  ur5_bringup.kdev4
.kdev4/: ur5_bringup.kdev4
config/: configurations.yaml  configurations_full.yaml  dev_configurations.yaml  dev_hw.yaml  ft_hw.yaml  gt_hw.yaml  hw.yaml  moveit.rviz  plan_hw.yaml  tasks.yaml  ur5_hw.yaml
config/old/: configurations.yaml  dev_configurations.yaml  dev_hw.yaml  ft_hw.yaml  plan_hw.yaml
launch/: .dev_ur5_bringup.launch.kate-swp  dev_ur5_bringup.launch  moveit.launch  moveit_rviz.launch  planning_context.launch  reload_params.launch  tasks.launch  ui.launch  ur5_bringup.launch  ur5_bringup.launch.autosave
src/: control_switch.cpp
urdf/: ur5_lab.urdf.xacro  ur5_lab_standalone.urdf.xacro
