<?xml version="1.0"?>
<package format="2">
  <name>ur5_bringup</name>
  <version>0.0.0</version>
  <description>The ur5_bringup package</description>
  
  <maintainer email="marie@todo.todo">marie</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend> roscpp                      </depend>
  <depend> configuration_msgs          </depend>
  <depend> moveit_planning_helper      </depend>


  <export>
  </export>
</package>
